--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 layout: sidebar
-style: light
+style: dark
 
 plugins:
   - jekyll-octicons
@@ -21,29 +21,29 @@ projects:
   # sort_by options:
   #   - pushed
   #   - stars
-  limit: 9
+  limit: 6
   exclude:
     archived: false
     forks: true
     projects:
     # - repo-name
 
-# social_media:
+social_media:
   # behance: your_username
   # dribbble: your_username
   # facebook: your_username
   # hackerrank: your_username
-  # instagram: your_username
-  # keybase: your_username
-  # linkedin: your_username
+  instagram: thesecondsonofman
+  keybase: mahi
+  linkedin: nshafiul
   # mastodon: your_username
   # medium: your_username
   # stackoverflow: your_user_id
   # telegram: your_username
-  # twitter: your_username
+  twitter: notmahi
   # unsplash: your_username
   # vk: your_username
-  # website: http://your_website_url
+  website: http://mahis.life
   # youtube: your_username
 
 topics:
