Changed font size, added image preview to posts and lot more

--- a/_galleries/photojournalism.yml
+++ b/_galleries/photojournalism.yml
@@ -1,5 +1,5 @@
 ---
-name: "photojournalism"
+name: "Photojournalism"
 arts:
 # Column 1
 - image: "assets/images/photography/7565_intersection.jpg"
